--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -374,7 +374,7 @@ body {
 }
 
 .explore-the-data {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   margin-top: 5rem;
   scroll-snap-align: start;
 
